--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
   </properties>
 
   <dependencies>
+  
+	<!-- GSON -->
+  	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.3</version>
+	</dependency>
+	
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
