--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,24 @@
 
   <groupId>info.blockchain</groupId>
   <artifactId>api</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>api</name>
-  <url>https://blockchain.info</url>
+  <url>https://blockchain.info/api</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <github.global.server>github</github.global.server>
   </properties>
+
+  <distributionManagement>
+	<repository>
+		<id>internal.repo</id>
+	    <name>Temporary Staging Repository</name>
+	    <url>file://${project.build.directory}/mvn-repo</url>
+	</repository>
+  </distributionManagement>
 
   <dependencies>
   
@@ -32,26 +41,40 @@
   </dependencies>
   
   <build>
-	<!-- Package everything into a single .jar along with the dependencies -->
-  	<plugins>
-  		<plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<executions>
-		  <execution>
-			<phase>package</phase>
-			<goals>
-			  <goal>single</goal>
-			</goals>
-		  </execution>
-		</executions>
-		<configuration>
-		  <descriptorRefs>
-			<descriptorRef>jar-with-dependencies</descriptorRef>
-		  </descriptorRefs>
-          <finalName>${project.artifactId}-${project.version}</finalName>
-       	  <appendAssemblyId>true</appendAssemblyId>
-		</configuration>
-	  </plugin>
+   	<plugins>
+	  
+	  <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+        <configuration>
+            <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+        </configuration>
+     </plugin>
+	  
+	  <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.10</version>
+            <configuration>
+                <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                <includes><include>**/*</include></includes>
+                <repositoryName>api-v1-client-java</repositoryName>      <!-- github repo name -->
+                <repositoryOwner>blockchain</repositoryOwner>    		 <!-- github username  -->
+            </configuration>
+            <executions>
+              <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>deploy</phase>
+              </execution>
+            </executions>
+        </plugin>
+	  
   	</plugins>
   </build>
   
