--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,13 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.3</version>
 	</dependency>
-	
+
+    <dependency>
+        <groupId>com.squareup.okhttp</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>2.6.0</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
